# lexora-worker

./: .env.example  .gitignore  LICENSE  PLAN.md  README.md  install.ps1  install.sh  pyproject.toml  simulate_5jobs.py
lexora_worker/: models.py
lexora_worker/cli/: main.py
lexora_worker/config/: settings.py
lexora_worker/hardware/: profiler.py
lexora_worker/inference/: capability.py  embed_engine.py  engine.py  image_engine.py  model_manager.py  model_resolver.py
lexora_worker/job/: manager.py
lexora_worker/websocket/: client.py
tests/: test_hardware_profiler.py  test_job_manager.py
