[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lexora-worker"
version = "1.0.0"
requires-python = ">=3.9"
dependencies = [
    "eval_type_backport>=0.2.0",
    "typer[all]>=0.12.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-socketio[asyncio_client]>=5.10.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.0",
    "keyring>=24.3.0",
    "python-dotenv>=1.0.0",
    "pynvml>=11.5.0",
    "psutil>=5.9.0",
    "rich>=13.7.0",
    "tenacity>=8.2.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
inference = [
    "vllm>=0.3.0",
    "torch>=2.1.0",
]
transformers = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "accelerate>=0.27.0",
]
windows = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "accelerate>=0.27.0",
]
mac = [
    "mlx-lm>=0.19.0",
]
image = [
    "diffusers>=0.32.0",
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "accelerate>=0.27.0",
    "bitsandbytes>=0.46.1",
    "Pillow>=10.0.0",
    "sentencepiece>=0.1.99",
]

[project.scripts]
lexora-worker = "lexora_worker.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["lexora_worker*"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "I", "UP", "B", "SIM"]
